--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ about:
 
 Hi there! 
 
-I am a data scientist who has been around for a while. I've built 🛠️ solutions for sectors ranging from ✈️ aerospace to 🏥 insurance. I've worked in areas like insurance fraud detection, satellite image segmentation, engine failure prediction, among others. You can take a look at my resume for details.
+I am a data scientist who has been around for a while. I've built 🛠️ solutions for sectors ranging from ✈️ aerospace to 🏥 insurance. I've worked in areas like insurance fraud detection, satellite image segmentation, engine failure prediction, among others. Checkout my resume for more!
 
 I am passionate about AI, and the way it is changing our world. This is why I love to keep on top of the latest advances - Stable Diffusion, Transformers, RecSys, MLOps, etc. Some of it I try to share back through my blog, where I write everything about AI that is churning in my brain.
 
