--- a/posts/stable_diff/getting_started_sd.ipynb
+++ b/posts/stable_diff/getting_started_sd.ipynb
@@ -10,7 +10,7 @@
     "description: \"I tried my hands on stable diffusion, trying to create styled images of myself. Here's what I found.\"\n",
     "author: \"Shubham Shinde\"\n",
     "date: \"11/30/2022\"\n",
-    "draft: true\n",
+    "draft: false\n",
     "categories:\n",
     "  - ai-art\n",
     "---"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff99f8a0",
+   "id": "3c2dab51",
    "metadata": {},
    "source": [
     "Some generated art of my wife and me.\n",
