--- a/posts/gnns/gnn_from_scratch.ipynb
+++ b/posts/gnns/gnn_from_scratch.ipynb
@@ -20,7 +20,7 @@
    "id": "57149734",
    "metadata": {},
    "source": [
-    "![graph-img](graph_img.jpeg)"
+    "![Let's Build a GNN](graph_cat.jpg){width=50%}"
    ]
   },
   {
