--- a/posts/gnns/intro_to_gnn.ipynb
+++ b/posts/gnns/intro_to_gnn.ipynb
@@ -11,7 +11,7 @@
     "author: \"Shubham Shinde\"\n",
     "date: \"01/25/2022\"\n",
     "categories:\n",
-    "  - gnn\n",
+    "  - deep-learning\n",
     "---"
    ]
   },
