--- a/posts/nlp/qa_guide.ipynb
+++ b/posts/nlp/qa_guide.ipynb
@@ -303,6 +303,10 @@
     "- [Wikipedia Assistant](https://huggingface.co/spaces/Rschmaelzle/wikipedia-assistant) - Uses BART model for generative question answering on wikipedia corpus.\n",
     "- [Haystack QA](https://huggingface.co/spaces/Abhilashvj/haystack_QA) - Uses roBERTa for extractive question answering.\n",
     "\n",
+    "There's also some blogposts on creating support chatbots using GPT-3.\n",
+    "\n",
+    "- [Build a GitHub support bot with GPT3, LangChain, and Python] https://dagster.io/blog/chatgpt-langchain\n",
+    "\n",
     "## Domain Adaptation\n",
     "Most of the models available online have been fine-tuned on datasets like SQuAD, NQ etc. which might be from a completely different domain compared to yours. In this case, will they work? Generally, those abilities should transfer to any domain, but fine-tuning can give you massive boosts in performance. What is the best approach to do this fine-tuning- this is an area of active research, so too early to write. But fine-tuning on a Question-Answer dataset is relatively easy.\n",
     "\n",
