fixed uber post img

--- a/posts/gnns/uber_graphs.ipynb
+++ b/posts/gnns/uber_graphs.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Uber, considering the volumes of financial transactions, attracts its fair share of fraudsters and hence they have built advanced fraud detection infrastructure. In this blog post, we'll look at one of the experiments they did with Graph Neural Networks, outline in this Uber [blog](https://www.uber.com/en-IN/blog/fraud-detection/). Yes, this is a blog post about a blog post.\n",
     "\n",
-    "<img src=\"assets/uber_photo.jpg\" width=\"600\" />\n",
+    "![](assets/uber_photo.jpg)\n",
     "\n",
     "## Fraud at Uber\n",
     "What kind of fraud happens at Uber? There are roughly two types, according another [post](https://www.uber.com/en-IN/blog/project-radar-intelligent-early-fraud-detection/) on Uber.\n",
