added aws lambda post

--- a/posts/gnns/intro_to_gnn.ipynb
+++ b/posts/gnns/intro_to_gnn.ipynb
@@ -12,7 +12,7 @@
     "date: \"01/25/2022\"\n",
     "categories:\n",
     "  - deep-learning\n",
-    "  - graph-nn\n",
+    "  - gnn\n",
     "---"
    ]
   },
