minor changes to rag

--- a/posts/nlp/fandom_rag.ipynb
+++ b/posts/nlp/fandom_rag.ipynb
@@ -903,9 +903,9 @@
     "\n",
     "Let us say the retriever picks up 20 documents out of 100k that are related to the query. A reranker will then look at those 20 documents, and re-arrange their order based on their importance to the query. This has been seen to improve the retrieval results tremendously in many cases.\n",
     "\n",
-    "(Then why can't we use rerankers for the entire data? That's because they are more compute expensive, and may take relatively more time to return results)\n",
+    "(Then why can't we use rerankers for the entire data? That's because they are more compute expensive, and may take relatively more time to return results\n",
     "\n",
-    "(For the architectural differences between rerankers and plain similarity search, see [this link](https://www.sbert.net/examples/applications/cross-encoder/README.html))"
+    "For the architectural differences between rerankers and plain similarity search, see [this link](https://www.sbert.net/examples/applications/cross-encoder/README.html))"
    ]
   },
   {
@@ -1024,20 +1024,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "D0_skkDdGMBm"
-   },
-   "outputs": [],
-   "source": [
-    "# lets store the most similar after reranking for benchmarking\n",
-    "sims = [ce_reranker.rerank_documents(query=q, documents=db.similarity_search(q, k=20), top_k=20, print_n=-1) for q in qlist]\n",
-    "with open(\"reranker_minilm.json\", \"w\") as fp:\n",
-    "    json.dump(dict(zip(qlist, sims)), fp, indent=4)"
    ]
   },
   {
@@ -2290,13 +2276,6 @@
     "\n",
     "Finally, our choice of document source itself has limitations. Our chosen source is a very simple one, and real life use cases can have more complex documentation that would require more tuning for building a RAG system."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
